--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,10 @@
 \usepackage{fancyhdr}
 \usepackage[english]{babel}
 \usepackage{tabularx}
-\usepackage[sfdefault,lining,light]{FiraSans}
+% \usepackage[sfdefault,lining,light]{FiraSans}
+% \usepackage[sfdefault,lining]{FiraSans}
+% \usepackage{noto}
+
 
 \input{glyphtounicode}
 
@@ -111,8 +114,8 @@
 \begin{center}
     \textbf{\Huge \scshape Alessandro Baccarini} \\ \vspace{1pt}
     \small 914-886-3901 $|$ \href{mailto:abaccarini@proton.me}{\underline{abaccarini@proton.me}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \href{https://www.linkedin.com/in/alessandro-baccarini/}{\underline{linkedin.com/in/alessandro-baccarini}} $|$
+    \href{https://github.com/anbaccar}{\underline{github.com/anbaccar}}
 \end{center}
 
 
@@ -138,9 +141,16 @@
       {Doctoral Researcher}{January 2010 -- Present}
       {University at Buffalo}{Buffalo, NY}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+            % \resumeItem{Primary maintainer}
+            % \resumeItem{Incorporated new techniques }
+            % \resumeItem{Optimized existing code}
+            % \resumeItem{Major refactoring in order to support future maintainability and extensibility}
+        \resumeItem{}
+        \resumeItem{}
+        \resumeItem{}
+        \resumeItem{}
+        \resumeItem{}
+        \resumeItem{}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -154,40 +164,65 @@
 %-------------------------------------------
 
     \resumeSubheading
-      {Graduate Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
+      {Graduate Research Assistant}{August 2017 -- May 2019}
+      {Fordham University}{Bronx, NY}
       \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
+        \resumeItem{}
+        \resumeItem{}
+        \resumeItem{}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
 
-%-----------PROJECTS-----------
-\section{Projects}
+% %-----------PROJECTS-----------
+% \section{Projects}
+%     \resumeSubHeadingListStart
+%       \resumeProjectHeading
+%           {\textbf{PICCO} $|$ \emph{C++, C, Bash}}{August 2022 -- Present}
+%           \resumeItemListStart
+%             \resumeItem{Primary maintainer}
+%             \resumeItem{Incorporated new techniques }
+%             \resumeItem{Optimized existing code}
+%             \resumeItem{Major refactoring in order to support future maintainability and extensibility}
+%           \resumeItemListEnd
+%       % \resumeProjectHeading
+%       %     {\textbf{RSS PPML} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
+%       %     \resumeItemListStart
+%       %   \resumeItem{}
+%       %   \resumeItem{}
+%       %   \resumeItem{}
+%       %     \resumeItemListEnd
+%       \resumeProjectHeading
+%           {\textbf{Information Theory Analysis} $|$ \emph{C++, Python}}{January 2021 -- Current}
+%           \resumeItemListStart
+%         \resumeItem{}
+%         \resumeItem{}
+%         \resumeItem{}
+%           \resumeItemListEnd
+%     \resumeSubHeadingListEnd
+
+
+%-----------Publications-----------
+\section{Publications}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{PICCO} $|$ \emph{C++, C, Bash}}{August 2022 -- Present}
+          {\textbf{Conference Proceedings}}{}
           \resumeItemListStart
-            \resumeItem{Primary maintainer}
-            \resumeItem{Incorporated new techniques }
-            \resumeItem{Optimized existing code}
-            \resumeItem{Major refactoring in order to support future maintainability and extensibility}
+        \resumeItem{\textbf{A. Baccarini}, M. Blanton, S. Zou, ``Understanding Information Disclosure from Secure Computation Output: A Study of Average Salary Computation.'' \emph{CODASPY}, 2024.}
+        \resumeItem{\textbf{A. Baccarini}, M. Blanton, C. Yuan, ``Multi-Party Replicated Secret Sharing over a Ring with Applications to Privacy-Preserving Machine Learning.'' \emph{Privacy Enhancing Technologies Symposium (PETS)} and \emph{Proceedings on Privacy Enhancing Technologies (PoPETs)}, Vol. 2023, No. 1, 2023. }
+        \resumeItem{\textbf{A. Baccarini}, T. Hayajneh, ``Evolution of Format Preserving Encryption on IoT Devices: FF1+.'' \href{https://scholarspace.manoa.hawaii.edu/handle/10125/59603}{HICCS, 2019.}}
+      \resumeItem{A. Alhayajneh, \textbf{A. Baccarini}, T. Hayajneh,  ``Quality of Service Analysis of VoIP Services.''  \emph{IEEE UEMCON}, 2018.}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{RSS PPML} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
+          {\textbf{Refereed Journals}}{}
           \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+        \resumeItem{\textbf{A. Baccarini}, M. Blanton, S. Zou,  ``Understanding Information Disclosure from Secure Computation Output: A Comprehensive Study of Average Salary Computation.''  \emph{Under submission}.}
+        \resumeItem{K.N. Griggs, O. Ossipova, C.P. Kohlios, \textbf{A. Baccarini}, E.A. Howson, T. Hayajneh, ``Healthcare Blockchain System Using Smart Contracts for Secure Automated Remote Patient Monitoring.'' \href{https://link.springer.com/article/10.1007/s10916-018-0982-x}{\emph{J Med Syst}, 42: 130. 2018.} }
+        \resumeItem{A. Alhayajneh, \textbf{A. Baccarini}, G.M. Weiss, T. Hayajneh, A.  Farajidavar,   ``Biometric Authentication and Verification for Medical Cyber Physical Systems.'' \href{https://www.mdpi.com/2079-9292/7/12/436}{\emph{Electronics}, 7(12), 436. 2018.}}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
+
 
 
 
@@ -197,9 +232,9 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: C/C++, Python, Bash, Lua, Latex} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, (Neo)Vim, VS Code } \\
-     \textbf{Libraries}{:  NumPy, Matplotlib, TensorFlow}
+     % \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
+     \textbf{Developer Tools}{: Git, SVN, Neovim, VS Code } \\
+     \textbf{Libraries}{:  GNU MP and MPFR, NumPy, Matplotlib, TensorFlow}
     }}
  \end{itemize}
 
